--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="box zone"><img src="img/server_safe_2.png" alt="SSafe"></div>
   </div>
 
-  <div class="zone yellow">Footer</div>
+<footer class="zone yellow">Made by OneManShow</footer>
+  <div >Footer</div>
 </body>
 </html>
