--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       <div class="box zone"><img src="img/server_safe_2.png" alt="SSafe"></div>
   </div>
 
-<footer class="zone yellow">Made by OneManShow</footer>
-  <div >Footer</div>
+<footer class=" madeby zone blue"><em>made by OneManShow</em></footer>
 </body>
 </html>
